Version 0.99.0
--------------
o First release version
o Add examples for each function. (201612291838)
o Remove xlsx package. (201612301652)
o MetClean function is renamed as MetCleaning. (201701031346)
o GetWorklist is added a new argument, user to control which style worklist is generated. (201701031600)
o In peak identification, forward and reverse column name is changed. (201701051044)
o In peak identification, adduct and isotopes in MS2 are removed. (201701051426)
o In peak identification, fix bugs in data who has no QC. (201701061633)
o Check duplicated names in data. (201701131406)

Version 0.99.2
--------------
o Fix error when data has more than 60,000 peak(201703110949).

Version 0.99.3
--------------
o Remove m2p function and it's demo data.
o Demo data is make more small (only one batch) because the package is very large.

Version 0.99.4
--------------
o Add a default path argument (i.e., ".") rather than NULL to avoid doing
path <- getwd() in all functions.
o Remove 1:n style iterations.
o qc.has.order. is changed to ordered.qc.
o Remove static images in the vignette.
o Remove excitement in error messages (!!!)
o Change code which go over 80 columns.
o Change MetFlowData as S4 class.



