@@ -62,6 +62,7 @@ MetNormalizer <- function(filename = "Metabolomics data",
                           user = "other",
                           path = ".") {
   options(warn = -1)
+  browser()
   if (datastyle == "mrm") {
     multiple <- 1
   }
