@@ -29,6 +29,7 @@ o Remove static images in the vignette.
 o Remove excitement in error messages (!!!)
 o Change code which go over 80 columns.
 o Change MetFlowData as S4 class.
+o Change hits..forwards. to hits.forward
 
 
 
